--- a/10print_03.html
+++ b/10print_03.html
@@ -52,7 +52,7 @@
           <li class="info-list-item">Nome Cognome</li>
           <li class="info-list-item">Fondamenti di Design per il digitale e fotografia - C.I.</li>
           <li class="info-list-item">Reference: <a href="https://www.youtube.com/watch?v=bEyTZ5ZZxZs" title="Coding Challenge #76: 10PRINT in p5.js" target="_blank">Coding Challenge #76: 10PRINT in p5.js</a></li>
-          <li class="info-list-item">Get <a href="10print_02.html" title="Source">Source</a></li>
+          <li class="info-list-item">Get <a href="/js/10Print_02.js" title="Source">Source</a></li>
         </ul>
       </footer>
 
