--- a/10print_02.html
+++ b/10print_02.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
     <link rel="stylesheet" href="css/sketch.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.2/lib/p5.js"></script>
-    <script src="/js/10Print_02.js"></script>
+    <script src="js/10Print_02.js"></script>
   </head>
   
   <body>
